Update About section

--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
       <div class="about-text">
         <h1>Hi, I’m Theo Bravos</h1>
         <p>
-          I’m a Business Analytics Master’s candidate at USC who builds
-          predictive models, dashboards, and data pipelines. I’ve interned in
-          sports analytics and financial data science—right now, I’m focused on
-          MLB/MLB-StatsAPI projects, machine learning, and advanced SQL. Take
-          a look at my work below!
+            As a Master of Science in Business Analytics candidate at 
+            the University of Southern California, I specialize in 
+            financial data science, predictive modeling, and business 
+            intelligence.  My experience includes an internship in sports 
+            analytics where I built models to improve forecasting accuracy 
+            and automated reporting for key decision-makers.  A former NCAA D1 
+            football player, I bring a strong sense of teamwork and discipline to 
+            my goal of pursuing a full-time role in data analytics or financial analysis.
         </p>
         <a href="assets/resume.pdf" class="btn">Download Résumé</a>
       </div>
