Add Predicting Loss Causes project card

--- a/index.html
+++ b/index.html
@@ -74,23 +74,24 @@
       <!-- Project Card 2 -->
       <div class="project-card">
         <img
-          src="assets/img/project2-screenshot.png"
-          alt="Project 2 screenshot"
+          src="assets/img/project-claims-screenshot.png"
+          alt="Predicting Loss Causes screenshot"
         />
         <div class="project-info">
-          <h3>Insurance Loss Analytics</h3>
+          <h3>Predicting Loss Causes</h3>
           <p>
-            Built XGBoost & LassoCV models on a 37K-row insurance dataset to
-            predict loss cost/exposure (MSE ≈ 73K) and recommended premium
-            adjustments (ROC-AUC 0.929).
+            Engineered 20+ features and trained classification/regression models 
+            (XGBoost, Tweedie, Lasso) on a 37K-row insurance dataset to predict claim 
+            likelihood and severity.  
           </p>
           <a
-            href="https://github.com/theobravos/insurance-loss-analytics"
+            href="https://github.com/theobravos/insurance-loss"
             target="_blank"
             class="project-link"
             >View Repo</a
           >
         </div>
+      </div>
       </div>
 
       <!-- Add more project cards similarly -->
