--- a/index.html
+++ b/index.html
@@ -51,25 +51,29 @@
     <h2>Selected Projects</h2>
     <div class="projects-grid">
       <!-- Project Card 1 -->
-      <div class="project-card">
-        <img
-          src="assets/img/project1-screenshot.png"
-          alt="Project 1 screenshot"
-        />
-        <div class="project-info">
-          <h3>MLB Hit Predictor</h3>
-          <p>
-            A Python & XGBoost pipeline that scrapes historical MLB at-bat data
-            via MLB-StatsAPI and predicts player hit probability with 82% accuracy.
-          </p>
-          <a
-            href="https://github.com/theobravos/mlb-hit-predictor"
-            target="_blank"
-            class="project-link"
-            >View Repo</a
-          >
-        </div>
-      </div>
+     <!-- Music Entertainment Analytics project card -->
+<div class="project-card">
+    <!-- Optional: screenshot if you have it -->
+    <img
+      src="assets/img/project-music-analytics-dashboard.png"
+      alt="Music Entertainment Analytics Dashboard"
+      class="project-screenshot"
+    />
+    <div class="project-info">
+      <h3>Music Entertainment Analytics</h3>
+      <p>
+        Performed end-to-end SQL analysis in PostgreSQL on Agents, Customers, and Engagements.
+        Built time-series and net-contribution analyses using window functions and CTEs.
+        Delivered strategic recommendations and mock Tableau dashboards (revenue, net result, preference scores).
+      </p>
+      <a
+        href="https://github.com/theobravos/music-entertainment-analytics"
+        target="_blank"
+        class="project-link"
+        >View Repo</a
+      >
+    </div>
+  </div>
 
       <!-- Project Card 2 -->
       <div class="project-card">
