Add Movie Ratings Analysis project card

--- a/index.html
+++ b/index.html
@@ -97,7 +97,30 @@
         </div>
       </div>
       </div>
-
+      <!-- Project Card 3 --> 
+       <!-- Movie Ratings Analysis project card -->
+<div class="project-card">
+  <!-- If you have a screenshot, include this img tag; otherwise, delete it -->
+  <img
+    src="assets/img/project-movie-ratings-screenshot.png"
+    alt="Movie Ratings Analysis screenshot"
+    class="project-screenshot"
+  />
+  <div class="project-info">
+    <h3>Movie Ratings Analysis</h3>
+    <p>
+      Explored and cleaned movie-rating data in Jupyter notebooks, built regression models 
+      to predict ratings, and compiled a final written report. Raw data is hosted on Dropbox;
+      see the GitHub repo for instructions.
+    </p>
+    <a
+      href="https://github.com/theobravos/movie-ratings-analysis"
+      target="_blank"
+      class="project-link"
+      >View Repo</a
+    >
+  </div>
+</div>     
       <!-- Add more project cards similarly -->
     </div>
   </section>
