changed project 3 format

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             football player, I bring a strong sense of teamwork and discipline to 
             my goal of pursuing a full-time role in data analytics or financial analysis.
         </p>
-        <a href="assets/resume.pdf" class="btn">Download Résumé</a>
+        <a href="assets/resume.pdf" class="btn">Download Resume</a>
       </div>
     </div>
   </section>
