--- a/portfolio-react/public/index.html
+++ b/portfolio-react/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Theo Bravos • Portfolio</title>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="theobravos.github.io" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
